# carla-dataset

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml
carla_dataset/: __init__.py
carla_dataset/config/: __init__.py  _config.py  _loader.py
carla_dataset/data/: __init__.py  _crop.py  _location.py  _run_data.py  _side.py
carla_dataset/intrinsics/: __init__.py  _intrinsics.py
cpdd_dataset/config/: _config.py  _loader.py
cpdd_dataset/data/: _crop.py  _location.py  _run_data.py  _side.py
cpdd_dataset/intrinsics/: __init__.py
