[tool.poetry]
name = "carla-dataset"
version = "0.1.2"
description = "Accessors for my carla dataset"
authors = ["Ryan Nett <rnett@calpoly.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
h5py = "^2.10.0"
pandas = "^1.0.0"
s3fs = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
