[tool.poetry]
name = "cpdd-dataset"
version = "0.1.3"
description = "Accessors for CARLA Panoramic Depth Detection Dataset, the dataset created as part of my thesis"
authors = ["Ryan Nett <rnett@calpoly.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rnett/cpdd-dataset"
repository = "https://github.com/rnett/cpdd-dataset"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
h5py = "^2.10.0"
pandas = "^1.0.0"
s3fs = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
